compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalFunsInClass.fir.kt
class A() {
    fun <!CONFLICTING_OVERLOADS!>b<!>() {
    }

    fun <!CONFLICTING_OVERLOADS!>b<!>() {
    }
}
